--- a/RtFileExplorer/View/DirectoryView.xaml
+++ b/RtFileExplorer/View/DirectoryView.xaml
@@ -38,12 +38,7 @@
             CanUserSortColumns="True"
             EnableRowVirtualization="True"
             Focusable="False"
-        >
-            <DataGrid.CellStyle>
-                <Style TargetType="DataGridCell">
-                    <EventSetter Event="MouseDoubleClick" Handler="DataGridCell_MouseDoubleClick" />
-                </Style>
-            </DataGrid.CellStyle>
-        </DataGrid>
+            PreviewMouseLeftButtonDown="DataGrid_PreviewMouseLeftButtonDown"
+        />
     </Grid>
 </UserControl>
