ファイル名編集 実装

--- a/RtFileExplorer/View/DirectoryView.xaml
+++ b/RtFileExplorer/View/DirectoryView.xaml
@@ -39,6 +39,7 @@
             EnableRowVirtualization="True"
             Focusable="False"
             PreviewMouseLeftButtonDown="DataGrid_PreviewMouseLeftButtonDown"
+            PreviewKeyDown="DataGrid_PreviewKeyDown"
         />
     </Grid>
 </UserControl>
