ファイル名変更が実際のファイルに適用されていなかったのを修正

--- a/RtFileExplorer/View/DirectoryView.xaml
+++ b/RtFileExplorer/View/DirectoryView.xaml
@@ -40,6 +40,7 @@
             Focusable="False"
             PreviewMouseLeftButtonDown="DataGrid_PreviewMouseLeftButtonDown"
             PreviewKeyDown="DataGrid_PreviewKeyDown"
+            CellEditEnding="DataGrid_CellEditEnding"
         />
     </Grid>
 </UserControl>
