--- a/RtFileExplorer/View/DirectoryView.xaml
+++ b/RtFileExplorer/View/DirectoryView.xaml
@@ -12,6 +12,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              DataContextChanged="UserControl_DataContextChanged"
+             PreviewKeyDown="UserControl_PreviewKeyDown"
              >
     <UserControl.DataContext>
         <ViewModel:DirectoryViewModel />
@@ -25,7 +26,13 @@
             <RowDefinition Height="1*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="4"/>
+            <ColumnDefinition Width="{Binding FilterViewModel.ViewWidth, Mode=TwoWay}"/>
+        </Grid.ColumnDefinitions>
         <Custom:DirectoryAddressBar
+            Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
             Items="{Binding DirectoryPathes, Mode=TwoWay}"
         />
         <DataGrid
@@ -50,8 +57,16 @@
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </DataGrid>
+        <GridSplitter 
+            Grid.Row="1" Grid.Column="1"
+            HorizontalAlignment="Stretch"
+        />
+        <local:FileInformationListFilterView
+            Grid.Row="1" Grid.Column="2"
+            DataContext="{Binding FilterViewModel}"
+        />
         <StatusBar
-            Grid.Row="2"
+            Grid.Row="2" Grid.ColumnSpan="3"
         >
             <TextBlock Text="{Binding PathCountText}"/>
         </StatusBar>
