--- a/RtFileExplorer/View/DirectoryView.xaml
+++ b/RtFileExplorer/View/DirectoryView.xaml
@@ -13,6 +13,7 @@
              d:DesignHeight="450" d:DesignWidth="800"
              DataContextChanged="UserControl_DataContextChanged"
              PreviewKeyDown="UserControl_PreviewKeyDown"
+             Loaded="UserControl_Loaded"
              >
     <UserControl.DataContext>
         <ViewModel:DirectoryViewModel />
@@ -50,6 +51,7 @@
             PreviewMouseLeftButtonDown="DataGrid_PreviewMouseLeftButtonDown"
             PreviewKeyDown="DataGrid_PreviewKeyDown"
             CellEditEnding="DataGrid_CellEditEnding"
+            ColumnHeaderDragCompleted="DataGrid_ColumnHeaderDragCompleted"
         >
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="Sorting">
