--- a/RtFileExplorer/View/DirectoryView.xaml
+++ b/RtFileExplorer/View/DirectoryView.xaml
@@ -70,6 +70,9 @@
                     <Components:ColumnVisibilityMenuItem DataContext="{Binding Data, Source={StaticResource Proxy}}" ItemType="LastWriteDate" />
                     <Components:ColumnVisibilityMenuItem DataContext="{Binding Data, Source={StaticResource Proxy}}" ItemType="LastAccessDate" />
                     <Components:ColumnVisibilityMenuItem DataContext="{Binding Data, Source={StaticResource Proxy}}" ItemType="Rating" />
+
+                    <MenuItem Header="ファイルを開く" Command="{Binding OpenPathCommand}"
+                              CommandParameter="{Binding PlacementTarget.SelectedItems, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ContextMenu}}}"/>
                 </ContextMenu>
             </DataGrid.ContextMenu>
         </DataGrid>
